Fix account drawer on mobile UI

--- a/app/javascript/skins/glitch/koyuspace/common.scss
+++ b/app/javascript/skins/glitch/koyuspace/common.scss
@@ -1682,3 +1682,7 @@ body.embed,
 .column-header__notif-cleaning-buttons button.active:hover {
   background: #fe53e1;
 }
+
+.drawer--account {
+  background: #223;
+}
